--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,3 +7,5 @@
 /* Common styles */
 @import url('./reset.css');
 @import url('./base.css');
+@import url('./form.css');
+@import url('./loader.css');
